--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.iml
+.idea/markdown-navigator/profiles_settings.xml
 .gradle
 /local.properties
+/.idea/misc.xml
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
