--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     implementation "com.google.dagger:dagger:$versions.dagger"
-    implementation "com.google.dagger:dagger-android-support:$versions.dagger"
+    implementation "com.google.dagger:dagger-android:$versions.dagger"
     implementation 'com.android.support:support-v4:27.0.2'
     kapt "com.google.dagger:dagger-android-processor:$versions.dagger"
     kapt "com.google.dagger:dagger-compiler:$versions.dagger"
